--- a/next-app/src/app/globals.css
+++ b/next-app/src/app/globals.css
@@ -17,3 +17,23 @@ body {
     color: var(--foreground);
     font-family: Arial, Helvetica, sans-serif;
 }
+
+html {
+    font-size: 62.5%;
+}
+
+h1,
+h2,
+h3,
+p {
+    padding: 0;
+    margin: 0;
+}
+
+/* a:hover {
+    text-decoration: underline;
+} */
+
+.hoverLine a:hover {
+    text-decoration: underline;
+}
